# mic-visualizer-demo

./: .gitignore  README.md
host_gui/: CMakeLists.txt  audio_stream.py  broadcaster.py  circular_buffer.py  circular_buffer_test.py  cmake-format.yaml  context.py  event_timeline.py  generate_luts.py  generator.h  generator_test.cc  image.py  iter_thread.py  itest.sh  lut.cpp  lut.py  lut_benchmark.py  lut_cpp.cpp  lut_test.py  main.cc  main.cpp  main.py  sample_source.py  startup_benchmark.py
host_gui/audio/: CMakeLists.txt  cardinal.pcm  chunk.h  chunk_test.cc  input_source.cc  input_source.h  input_source_test.cc  qaudio_source_coro.cc  qaudio_source_coro.h  qaudio_source_coro_test.cc  source.cc  source.h  source_test.cc  spectrum.cc  spectrum.h  spectrum_test.cc
host_gui/cmake/: Diy.cmake
host_gui/diy/: CMakeLists.txt  async_generator.h  async_generator_test.cc  buffer.h  buffer_test.cc  generator.h  generator_test.cc  handle.h  latency_logger.h  rational.h  rational_test.cc  task.h  task_test.cc  test_main.cc
host_gui/gui/: CMakeLists.txt  colormap_picker.cc  colormap_picker.h  colormap_picker.py  colormaps.cc  colormaps.h  cursor.cc  cursor.h  cursor.py  generate_colormaps.py  image_viewer.cc  image_viewer.cpp  image_viewer.h  image_viewer.py  main_window.cc  main_window.cpp  main_window.h  main_window.py  model.cc  model.h  model_test.cc  scroll_area.cc  scroll_area.h  scroll_area.py
host_gui/image/: CMakeLists.txt  circular_buffer.h  circular_buffer_test.cc  frame_scheduler.h  frame_scheduler_test.cc  interpolate.cc  interpolate.h  interpolate_test.cc  lut.h  lut_benchmark.cc  lut_test.cc  qimage_aligned.h  qimage_aligned_test.cc  qimage_eigen.h  qimage_eigen_test.cc
nb/: audio_stream.py  audio_widget.py  audio_widget_test.py  circular_buffer_test.py  context.py  graph_test.py  image.py  lut.cpp  lut.py  lut_cpp.cpp  lut_test.py
nb/gui/: colormap_picker.py  image_viewer.py  main_window.py
